--- a/css/main.css
+++ b/css/main.css
@@ -103,5 +103,41 @@ h1 {
 
 .first-text {
   font-size: 16px;
-  padding-top: 54px;
+  line-height: 1.6;
+  padding-top: 55px;
+  padding-bottom: 55px;
+  padding-left: 7px;
+  padding-right: 77px;
+}
+
+.third{
+  text-align: center;
+  font-size: 12px;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+footer {
+  background-color: black;
+}
+
+.locality {
+  color: white;
+  font-size: 12px;
+  line-height: 1.2;
+  padding-left: 7px;
+  padding-top: 30px;
+  padding-bottom: 22px;
+}
+
+.sources {
+  font-size: 10px;
+  color: white;
+  padding-left: 7px;
+  line-height: 1.2;
+  padding-bottom: 38px;
+}
+
+.sources a {
+  text-decoration: none;
 }
